Wifi details are not stored in the Decryption Key Management dialog (post 1.8.x)
This issue was migrated from bug 8446 in our old bug tracker.
Original bug information:
Reporter: pau…@nai…
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows 7
Platform: x86-64
Version: 1.8.5
Attachments:
: Failing Version 1.8.5 dialog
: Working in 1.6.13
: WPA key entry using preferences method
airpcap_using_uat.patch: AirPcap using UAT preference over obsolete strings
airpcap_loader.c.patch: AirPcap support with no keys